<resources>
    <string name="app_name">ProyectoEsdi</string>
    <string name="title_activity_disponibilidad">Availabilty</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="acceso">Access:</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Log out</string>
    <string name="log_in">Log In</string>
    <string name="google_status_fmt">Account: %s</string>
    <string name="firebase_status_fmt">User: %s</string>
    <string name="loading">Loading…</string>
    <string name="contacto_titulo">I.T. Dept.</string>
    <string name="contacto_subtitulo">Contact us by</string>
    <string name="contacto_telefono">Phone</string>
    <string name="contacto_correo">Email</string>
    <string name="contacto_consultas">Messaging</string>
    <string name="contacto_habla">Speak with us</string>
    <string name="contacto_chat">Chat</string>
    <string name="menuP_web">Web page</string>
    <string name="menuP_tutoriales">Tutorials</string>
    <string name="menuP_contacto">Contact</string>
    <string name="menuP_aulas">Classroom\navailability</string>
    <string name="menuP_aulasV2">Classroom availability</string>
    <string name="menuP_mensajes">Messages</string>
    <string name="menuP_incidencias">Incidences</string>
    <string name="menuP_empresas">Business\nPartners</string>
    <string name="menuP_empresasV2">Business Partners</string>
    <string name="menuP_estadoServicios">Services</string>
    <string name="menuP_cafeteria">Coffe Shop</string>
    <string name="menuP_languages">Languages</string>
    <string name="help">Disconnect</string>
    <string name="tituloEstadoImpr">Sabadell\'s printers status:</string>
    <string name="confTemaTitulo">Use the light theme: </string>
    <string name="confLenguaTitulo">Displayed language:</string>
    <string name="confLenguaDescr">Change the app\'s language without changing your phone\'s one</string>
    <string name="sugerencias"> Suggestions </string>
    <string name="incidencias"> Incidences</string>
    <string name="consultas"> Queries </string>
    <string name="equipo"> Equipment </string>
    <string name="titulo"> Title </string>
    <string name="escanear"> Scan QR </string>
    <string name="descripcion"> Description </string>
    <string name="nuevo"> New </string>
    <string name="finalizar"> End </string>
    <string name="cancelar"> Cancel </string>
    <string name="seleccionarhora"> Select hour </string>
    <string name="seleccionardia"> Select day</string>
    <string name="descrMapa">The map shows the current availability of the classrooms</string>
    <string name="aceptar">Accept</string>
    <string name="siguiente">Next</string>
    <string name="menuSimpresores">Printers</string>
    <string name="menuSwifi">Wi-Fi</string>
    <string name="menuSdocs">Google\nDocs</string>
    <string name="menuScalendar">Google\nCalendar</string>
    <string name="menuSmail">Gmail</string>
    <string name="menuScafeteria">Coffe\nShop</string>
    <string name="estat">Status:</string>
    <string name="titMenuP">Main Menu</string>
    <string name="titContacto">Contact</string>
    <string name="titWeb">Web Page</string>
    <string name="titMensajes">Messages</string>
    <string name="titDispoA">Classroom Availability</string>
    <string name="titGLPI">GLPI</string>
    <string name="titEmpresas">Business Partners</string>
    <string name="titTutorial">Tutorials</string>
    <string name="titServicios">Services</string>
    <string name="title_activity_cafeteria">Cafeteria</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="titSeleccionarPdf">Choose a PDF</string>
    <string name="ofertas">Sales</string>
    <string name="menu">Menu</string>
    <string name="carta">Card</string>
    <string name="primerplat">1st plate</string>
    <string name="segonplat">2nd plate</string>
    <string name="postres">Dessert</string>
    <string name="visualizaPdf">View PDF</string>
    <string name="utilidad">Utility</string>
    <string name="utilidadPa">This category contains all the tutorials related to the use of printers and computers</string>
    <string name="producto">Product</string>
    <string name="productoPa">Tutorial related to the products</string>
    <string name="extras">Extras</string>
    <string name="extrasPa">Category of tutorials where you will find the rest of things</string>
    <string-array name="array_lista_utilidad">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
        <item>Item4</item>
        <item>Item5</item>
        <item>Item6</item>
        <item>Item7</item>
        <item>Item8</item>
        <item>Item9</item>
        <item>Item10</item>
        <item>Item11</item>
        <item>Item12</item>
        <item>Item13</item>
        <item>Item14</item>
    </string-array>
    <string-array name="array_lista_utilidad_sub">
        <item>Esto es el subtitulo del Item1</item>
        <item>Esto es el subtitulo del Item2</item>
        <item>Esto es el subtitulo del Item3</item>
        <item>Esto es el subtitulo del Item4</item>
        <item>Esto es el subtitulo del Item5</item>
        <item>Esto es el subtitulo del Item6</item>
        <item>Esto es el subtitulo del Item7</item>
        <item>Esto es el subtitulo del Item8</item>
        <item>Esto es el subtitulo del Item9</item>
        <item>Esto es el subtitulo del Item10</item>
        <item>Esto es el subtitulo del Item11</item>
        <item>Esto es el subtitulo del Item12</item>
        <item>Esto es el subtitulo del Item13</item>
        <item>Esto es el subtitulo del Item14</item>
    </string-array>
    <string-array name="array_lista_producto">
        <item>Item20</item>
        <item>Item21</item>
        <item>Item22</item>
        <item>Item23</item>
        <item>Item24</item>
        <item>Item25</item>
        <item>Item26</item>
        <item>Item27</item>
        <item>Item28</item>
        <item>Item29</item>
        <item>Item30</item>
        <item>Item31</item>
        <item>Item32</item>
        <item>Item33</item>
    </string-array>
    <string-array name="array_lista_producto_sub">
        <item>Esto es el subtitulo del Item20</item>
        <item>Esto es el subtitulo del Item21</item>
        <item>Esto es el subtitulo del Item22</item>
        <item>Esto es el subtitulo del Item23</item>
        <item>Esto es el subtitulo del Item24</item>
        <item>Esto es el subtitulo del Item25</item>
        <item>Esto es el subtitulo del Item26</item>
        <item>Esto es el subtitulo del Item27</item>
        <item>Esto es el subtitulo del Item28</item>
        <item>Esto es el subtitulo del Item29</item>
        <item>Esto es el subtitulo del Item30</item>
        <item>Esto es el subtitulo del Item31</item>
        <item>Esto es el subtitulo del Item32</item>
        <item>Esto es el subtitulo del Item33</item>
    </string-array>
    <string-array name="array_lista_extras">
        <item>Item40</item>
        <item>Item41</item>
        <item>Item42</item>
        <item>Item43</item>
        <item>Item44</item>
        <item>Item45</item>
        <item>Item46</item>
        <item>Item47</item>
        <item>Item48</item>
        <item>Item49</item>
        <item>Item50</item>
        <item>Item51</item>
        <item>Item52</item>
        <item>Item53</item>
    </string-array>
    <string-array name="array_lista_extras_sub">
        <item>Esto es el subtitulo del Item40</item>
        <item>Esto es el subtitulo del Item41</item>
        <item>Esto es el subtitulo del Item42</item>
        <item>Esto es el subtitulo del Item43</item>
        <item>Esto es el subtitulo del Item44</item>
        <item>Esto es el subtitulo del Item45</item>
        <item>Esto es el subtitulo del Item46</item>
        <item>Esto es el subtitulo del Item47</item>
        <item>Esto es el subtitulo del Item48</item>
        <item>Esto es el subtitulo del Item49</item>
        <item>Esto es el subtitulo del Item50</item>
        <item>Esto es el subtitulo del Item51</item>
        <item>Esto es el subtitulo del Item52</item>
        <item>Esto es el subtitulo del Item53</item>
    </string-array>
    <string-array name="array_lista_general">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
        <item>Item4</item>
        <item>Item5</item>
        <item>Item6</item>
        <item>Item7</item>
        <item>Item8</item>
        <item>Item9</item>
        <item>Item10</item>
        <item>Item11</item>
        <item>Item12</item>
        <item>Item13</item>
        <item>Item14</item>
        <item>Item20</item>
        <item>Item21</item>
        <item>Item22</item>
        <item>Item23</item>
        <item>Item24</item>
        <item>Item25</item>
        <item>Item26</item>
        <item>Item27</item>
        <item>Item28</item>
        <item>Item29</item>
        <item>Item30</item>
        <item>Item31</item>
        <item>Item32</item>
        <item>Item33</item>
        <item>Item40</item>
        <item>Item41</item>
        <item>Item42</item>
        <item>Item43</item>
        <item>Item44</item>
        <item>Item45</item>
        <item>Item46</item>
        <item>Item47</item>
        <item>Item48</item>
        <item>Item49</item>
        <item>Item50</item>
        <item>Item51</item>
        <item>Item52</item>
        <item>Item53</item>
    </string-array>
</resources>