<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.usuario.webesdi.tutoriaV2">

    <ListView
        android:id="@+id/listaPdfInicial"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="8dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.454"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:id="@+id/scrollTutorial">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imgImpresora"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="4dp"
                android:background="@color/tarj1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/impresora" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tarj1"
                android:text="@string/utilidad"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/utilidadPa"
                android:textAlignment="center"
                android:textColor="@color/letrasEsdi"
                android:background="@color/tarj1"
                android:padding="8dp"/>

            <ImageView
                android:id="@+id/imgPS"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@color/tarj2"
                android:paddingTop="3dp"
                app:srcCompat="@drawable/photoshop" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.60"
                android:background="@color/tarj2"
                android:text="@string/producto"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/productoPa"
                android:textAlignment="center"
                android:textColor="@color/letrasEsdi"
                android:paddingBottom="8dp"
                android:background="@color/tarj2" />

            <ImageView
                android:id="@+id/imgGimp"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:background="@color/tarj3"
                app:srcCompat="@drawable/gimp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/tarj3"
                android:text="@string/extras"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extrasPa"
                android:textAlignment="center"
                android:textColor="@color/letrasEsdi"
                android:padding="8dp"
                android:background="@color/tarj3"/>
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
